basics in place

--- a/hooks/install
+++ b/hooks/install
@@ -93,6 +93,40 @@ install_tools () {
 # Always run - tools might get re-configured
 install_tools 
 
+install_juju() {
+  juju-log "Installing juju for local testing..."
+  apt-add-repository ppa:juju/pkgs
+  # Might not pickup for current release - so ignore errors
+  apt-get update || true
+  apt-get -qq install -y juju charm-tools apt-cacher-ng zookeeper libvirt-bin lxc charm-helper-sh
+}
+install_juju
+
+configure_juju_local_provider() {
+  mkdir -p /home/ubuntu/.juju
+  cat > /home/ubuntu/.juju/environments.yaml <<EOF
+environments:
+  local:
+    type: local
+    data-dir: /tmp/juju-local
+    admin-secret: abcdefghijklmnopqrstuvwxyz1234567890
+    control-bucket: foo-bucket
+    default-series: oneiric
+EOF
+  chown -Rf ubuntu.ubuntu /home/ubuntu/.juju
+  #sudo -su ubuntu ssh-keygen -q -N '' -t rsa -b 2048 -f /home/ubuntu/.ssh/id_rsa
+}
+configure_juju_local_provider #sudo -su ubuntu configure_juju_local_provider
+
+create_charms_repo() {
+  mkdir -p /home/ubuntu/charms/oneiric
+  chown -Rf ubuntu:ubuntu /home/ubuntu/charms
+}
+[ -d /home/ubuntu/charms/oneiric ] || create_charms_repo
+
+#( cd /home/ubuntu/charms/oneiric && charm getall . )
+#slurp_charms
+
 juju-log "Opening ports"
 open-port 8080
 
