really allow jenkins sudo

--- a/hooks/install
+++ b/hooks/install
@@ -123,6 +123,7 @@ EOF
   chown -Rf jenkins.jenkins $JENKINS_HOME/.juju
   addgroup jenkins libvirtd
   echo "jenkins ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/91-jenkins-charmtester
+  chmod 0440 /etc/sudoers.d/91-jenkins-charmtester
 }
 configure_juju_local_provider #sudo -su jenkins configure_juju_local_provider
 
