--- a/hooks/install
+++ b/hooks/install
@@ -124,8 +124,9 @@ EOF
   addgroup jenkins libvirtd
   echo "jenkins ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/91-jenkins-charmtester
   chmod 0440 /etc/sudoers.d/91-jenkins-charmtester
-  mount -t tmpfs -o size=`config-get tmpfs_size` tmpfs /var/lib/lxc
+  echo "tmpfs /var/lib/lxc tmpfs size=2g 0 0" >> /etc/fstab
   # maybe do the same for /var/cache/lxc?
+  mount -at tmpfs 
 }
 configure_juju_local_provider #sudo -su jenkins configure_juju_local_provider
 
