--- a/hooks/install
+++ b/hooks/install
@@ -70,13 +70,6 @@ boostrap_jenkins_configuration (){
 # any configuration changes made
 [[ -f /var/lib/jenkins/config.bootstrapped ]] || boostrap_jenkins_configuration
 
-run_jenkins_as_ubuntu() {
-  sed -i 's/env USER=.*/env USER="ubuntu"/' /etc/init/jenkins.conf
-  sed -i 's/env GROUP=.*/env GROUP="ubuntu"/' /etc/init/jenkins.conf
-  chown -Rf ubuntu.ubuntu $JENKINS_HOME
-}
-#run_jenkins_as_ubuntu
-
 juju-log "Restarting jenkins to pickup configuration changes"
 service jenkins restart
 
@@ -109,6 +102,20 @@ install_juju() {
 }
 install_juju
 
+generate_ssh_keys() {
+  su -l jenkins -c "ssh-keygen -q -N '' -t rsa -b 2048 -f $JENKINS_HOME/.ssh/id_rsa"
+}
+[ -f $JENKINS_HOME/.ssh/id_rsa ] || generate_ssh_keys
+
+make_jenkins_sudo() {
+  echo "jenkins ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/91-jenkins-charmtester
+  chmod 0440 /etc/sudoers.d/91-jenkins-charmtester
+}
+use_tmpfs_for_tests() {
+  echo "tmpfs /var/lib/lxc tmpfs size=2g 0 0" >> /etc/fstab
+  # maybe do the same for /var/cache/lxc?
+  mount -at tmpfs 
+}
 configure_juju_local_provider() {
   mkdir -p $JENKINS_HOME/.juju
   cat > $JENKINS_HOME/.juju/environments.yaml <<EOF
@@ -119,21 +126,14 @@ environments:
     admin-secret: abcdefghijklmnopqrstuvwxyz1234567890
     control-bucket: foo-bucket
     default-series: oneiric
+    juju-origin: ppa
 EOF
   chown -Rf jenkins.jenkins $JENKINS_HOME/.juju
   addgroup jenkins libvirtd
-  echo "jenkins ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/91-jenkins-charmtester
-  chmod 0440 /etc/sudoers.d/91-jenkins-charmtester
-  echo "tmpfs /var/lib/lxc tmpfs size=2g 0 0" >> /etc/fstab
-  # maybe do the same for /var/cache/lxc?
-  mount -at tmpfs 
+  make_jenkins_sudo
+  use_tmpfs_for_tests
 }
-configure_juju_local_provider #sudo -su jenkins configure_juju_local_provider
-
-generate_ssh_keys() {
-  su -l jenkins -c "ssh-keygen -q -N '' -t rsa -b 2048 -f $JENKINS_HOME/.ssh/id_rsa"
-}
-[ -f $JENKINS_HOME/.ssh/id_rsa ] || generate_ssh_keys
+[ -d $JENKINS_HOME/.juju ] || configure_juju_local_provider
 
 create_charms_repo() {
   mkdir -p $JENKINS_HOME/charms/oneiric
@@ -159,7 +159,8 @@ load_charm_jobs() {
   done
   chown -Rf jenkins.jenkins $JENKINS_HOME/jobs/
 }
-load_charm_jobs
+load_charm_jobs # ok, is idempotent
+# what about calling through config?... have to split creat_job_for_charm into common lib
 
 juju-log "Opening ports"
 open-port 8080
