--- a/hooks/install
+++ b/hooks/install
@@ -141,14 +141,25 @@ create_charms_repo() {
 }
 [ -d $JENKINS_HOME/charms/oneiric ] || create_charms_repo
 
+get_job_name() {
+  local charm_name=$1
+  echo "oneiric-charm-$charm_name"
+}
+get_api_token() {
+  echo `echo $ADMIN_PASSWORD | shasum | awk '{ print $1 }'`
+}
 create_job_for_charm() {
   local charm_name=$1
-  mkdir -p -m755 $JENKINS_HOME/jobs/$charm_name
+  local job_name=$(get_job_name $charm_name)
+  local api_token=$(get_api_token)
+  mkdir -p -m755 $JENKINS_HOME/jobs/$job_name
   export JENKINS_HOME
   export charm_name
-  cheetah fill --stdout --env templates/job-config.xml > $JENKINS_HOME/jobs/$charm_name/config.xml
-  cheetah fill --stdout --env templates/charm-install-test.sh > $JENKINS_HOME/jobs/$charm_name/charm-install-test.sh
-  chmod 755 $JENKINS_HOME/jobs/$charm_name/charm-install-test.sh
+  export job_name
+  export api_token
+  cheetah fill --stdout --env templates/job-config.xml > $JENKINS_HOME/jobs/$job_name/config.xml
+  cheetah fill --stdout --env templates/charm-install-test.sh > $JENKINS_HOME/jobs/$job_name/charm-install-test.sh
+  chmod 755 $JENKINS_HOME/jobs/$job_name/charm-install-test.sh
   cp files/juju-service-started $JENKINS_HOME/
   chmod 755 $JENKINS_HOME/juju-service-started
   chown -Rf jenkins.jenkins $JENKINS_HOME/juju-service-started
