back up plugins

--- a/hooks/install
+++ b/hooks/install
@@ -79,31 +79,13 @@ install_plugins(){
   juju-log "Installing plugins ($PLUGINS)"
   mkdir -p $JENKINS_HOME/plugins
   chmod a+rx $JENKINS_HOME/plugins
-  track_dir=`mktemp -d /tmp/plugins.installed.XXXXXXXX`
-  ln -s $JENKINS_HOME/plugins/*.hpi $track_dir
-  local plugin=""
-  local plugin_file=""
-  local opts=""
   for plugin in $PLUGINS ; do
     plugin_file=$JENKINS_HOME/plugins/$plugin.hpi
-    # Note that by default wget verifies certificates as of 1.10.
-    if [ "$PLUGINS_CHECK_CERT" = "no" ] ; then
-      opts="--no-check-certificate"
-    fi
-    wget $opts --timestamping -q -O $plugin_file $PLUGINS_SITE/latest/$plugin.hpi
+    juju-log "wgetting $plugin from $PLUGINS_SITE/latest/$plugin.hpi"
+    wget --no-check-certificate -q -O $plugin_file $PLUGINS_SITE/latest/$plugin.hpi
+    juju-log "got it"
     chmod a+r $plugin_file
-    rm -f $track_dir/$plugin.hpi
   done
-  # Warn about undesirable plugins, or remove them.
-  unlisted_plugins=`ls $track_dir`
-  [[ -n "$unlisted_plugins" ]] || return 0
-  if [[ $REMOVE_UNLISTED_PLUGINS = "yes" ]] ; then
-    for plugin_file in `ls $track_dir` ; do
-      rm -vf $JENKINS_HOME/plugins/$plugin_file
-    done
-  else
-    juju-log -l WARNING "Unlisted plugins: (`ls $track_dir`) Not removed. Set remove-unlisted-plugins to yes to clear them away."
-  fi
 }
 
 [[ -z "$PLUGINS" ]] || install_plugins
