--- a/hooks/install
+++ b/hooks/install
@@ -177,6 +177,8 @@ install_juju() {
 
   juju-log "creating/updating jenkins jobs for charms"
   [ -f lib/charm-job.sh ] && . lib/charm-job.sh && update_charm_jobs jenkins $JENKINS_HOME
+
+  juju-log "done installing juju"
 }
 install_juju
 
