--- a/hooks/install
+++ b/hooks/install
@@ -14,7 +14,6 @@ PLUGINS_CHECK_CERT=$(config-get plugins-check-certificate)
 REMOVE_UNLISTED_PLUGINS=$(config-get remove-unlisted-plugins)
 CWD=$(dirname $0)
 JENKINS_HOME=/var/lib/jenkins
-#JENKINS_VERSION=`dpkg -p jenkins | grep Version | awk '{print $2}' | sed 's/\+.*//'`
 
 setup_jenkins_source () {
   # Do something with < Oneiric releases - maybe PPA
@@ -94,7 +93,9 @@ install_plugins(){
 [[ -z "$PLUGINS" ]] || install_plugins
 
 install_juju_plugins() {
-  #JENKINS_VERSION=`dpkg -p jenkins | grep Version | awk '{print $2}' | sed 's/\+.*//'`
+  # JENKINS_VERSION=`dpkg -p jenkins | grep Version | awk '{print $2}' | sed 's/\+.*//'`
+  # or maybe if the server was up,
+  # jenkins-cli -s http://localhost:8080 version > junk
   plugin_urls="http://mirrors.jenkins-ci.org/plugins/maven-plugin/1.424.6/maven-plugin.hpi"
   for url in $plugin_urls ; do
     ( cd $JENKINS_HOME/plugins && wget --no-check-certificate --timestamping -q $url )
